<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/tv_orderTitle"
        android:layout_width="215dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_orderTitle"
        android:textAlignment="center"
        android:textColor="#0F0E0E"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_basePriceLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/tv_basePriceLbl"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_orderTitle" />

    <TextView
        android:id="@+id/tv_toppingsLbl"
        android:layout_width="98dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:text="@string/tv_toppingsLbl"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_basePriceLbl" />

    <TextView
        android:id="@+id/tv_selectedToppings"
        android:layout_width="353dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_selectedToppings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_toppingsLbl" />

    <TextView
        android:id="@+id/tv_deliveryLbl"
        android:layout_width="151dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_deliveryLbl"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_selectedToppings" />

    <TextView
        android:id="@+id/tv_totalLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/tv_totalLbl"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_deliveryLbl" />

    <TextView
        android:id="@+id/tv_deliveryCost"
        android:layout_width="169dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_deliveryCost"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_deliveryLbl"
        app:layout_constraintTop_toBottomOf="@+id/tv_selectedToppings" />

    <TextView
        android:id="@+id/tv_toppingsTotal"
        android:layout_width="130dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_toppingsTotal"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toEndOf="@+id/tv_toppingsLbl"
        app:layout_constraintTop_toBottomOf="@+id/tv_basePrice" />

    <TextView
        android:id="@+id/tv_basePrice"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_basePrice"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_basePriceLbl"
        app:layout_constraintTop_toBottomOf="@+id/tv_orderTitle" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/btn_finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_totalAmount"
        android:layout_width="169dp"
        android:layout_height="43dp"
        android:layout_marginTop="64dp"
        android:text="@string/tv_totalAmount"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toEndOf="@+id/tv_totalLbl"
        app:layout_constraintTop_toBottomOf="@+id/tv_deliveryCost"
        app:layout_constraintVertical_bias="0.041" />
</androidx.constraintlayout.widget.ConstraintLayout>