<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gl_selectedToppings"
        android:layout_width="wrap_content"
        android:layout_height="213dp"
        android:foregroundGravity="center_vertical|center"
        app:columnCount="@integer/gl_columnCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="@integer/gl_rowCount">

    </androidx.gridlayout.widget.GridLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="402dp"
        android:layout_height="245dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gl_selectedToppings">

        <ImageView
            android:id="@+id/iv_pizza"
            android:layout_width="match_parent"
            android:layout_height="236dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/pizza" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="228dp"
        android:layout_marginTop="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cb_delivery"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/cb_delivery"
                app:layout_constraintStart_toStartOf="parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="44dp" />
        </TableRow>

        <TableRow
            android:layout_width="430dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_addTopping"
                android:layout_width="211dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_addTopping" />

            <Button
                android:id="@+id/btn_clearPizza"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_clearPizza" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="58dp">

            <Button
                android:id="@+id/btn_checkout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btn_checkout" />
        </TableRow>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>